@@ -5,6 +5,12 @@ CHANGELOG
 IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
 *********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		
 
+
+September 13th 2016
+*******************
+
+- Added OnionCat and Yubikey Personalization GUI installers
+
 September 10th 2016
 *******************
 
